# searcher-mcp

./: .dockerignore  .editorconfig  .pre-commit-config.yaml  Dockerfile  LICENSE.txt  pyproject.toml
searcher_mcp/: __init__.py  server.py
